# ChangeLog for x11-proto/scrnsaverproto
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/x11-proto/scrnsaverproto/ChangeLog,v 1.24 2006/07/19 14:26:43 gmsoft Exp $

  19 Jul 2006; Guy Martin <gmsoft@gentoo.org> scrnsaverproto-1.1.0.ebuild:
  Stable on hppa.

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org>
  scrnsaverproto-1.1.0.ebuild:
  Mark 1.1.0 stable on ia64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  scrnsaverproto-1.1.0.ebuild:
  arm/sh stable

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  scrnsaverproto-1.1.0.ebuild:
  ppc/sparc/mips/alpha stable

  30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  scrnsaverproto-1.1.0.ebuild:
  Stable on amd64.

  30 Jun 2006; Markus Rothe <corsair@gentoo.org>
  scrnsaverproto-1.1.0.ebuild:
  Stable on ppc64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  scrnsaverproto-1.1.0.ebuild:
  x86 stable.

  08 Apr 2006; Donnie Berkholz <spyderous@gentoo.org>;
  -scrnsaverproto-1.0.2.ebuild:
  Pull old ebuild.

*scrnsaverproto-1.1.0 (03 Apr 2006)

  03 Apr 2006; Donnie Berkholz <spyderous@gentoo.org>;
  +scrnsaverproto-1.1.0.ebuild:
  Bump. Includes new ScreenSaverSuspend request.

  31 Mar 2006; Diego Pettenò <flameeyes@gentoo.org>
  scrnsaverproto-1.0.2.ebuild:
  Add ~x86-fbsd keyword.

  09 Mar 2006; Aron Griffis <agriffis@gentoo.org>
  scrnsaverproto-1.0.2.ebuild:
  Mark 1.0.2 ~ia64

  14 Feb 2006; Markus Rothe <corsair@gentoo.org>
  scrnsaverproto-1.0.2.ebuild:
  Added ~ppc64

  31 Jan 2006; Rene Nussbaumer <killerfox@gentoo.org>
  scrnsaverproto-1.0.2.ebuild:
  Unstable on hppa.

  26 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  -scrnsaverproto-1.0.1.ebuild:
  Pull old versions.

  26 Dec 2005; Stefaan De Roeck <stefaan@gentoo.org>
  scrnsaverproto-1.0.2.ebuild:
  Marked ~alpha

*scrnsaverproto-1.0.2 (17 Dec 2005)

  17 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>