@@ -1,4 +1,4 @@
 DIST scrnsaverproto-1.1.0.tar.bz2 38066 RMD160 966944d272b035eb0d1f8826c411ca1ee56ab5b3 SHA1 4c5859948034f2e5f625d930c73e4b96a6a0c29c SHA256 db09abf73cc339c05c0488639731794372a4770cfca76c2645f503f9fccd478f
-EBUILD scrnsaverproto-1.1.0.ebuild 541 RMD160 83b08fcef1c4158bf2cc047493f6adcc3e4e8997 SHA1 0f5c7620dcd7b686df1e48de9003d2c795d4b520 SHA256 b05059e7354436ec7498268879c15829ac744e7b5de6d5b0ef7f16293078f4e9
-MISC ChangeLog 2924 RMD160 832d3028fd9eddd456ac855a47b2636d44d56c7c SHA1 ed63eb184b0439c9f7b475ca24108e80128f6efd SHA256 12c7693dcdbf607fc504ac0c8d24042e9fcf7dbe1a30a86f17bea7846560fbcd
+EBUILD scrnsaverproto-1.1.0.ebuild 525 RMD160 17665ccc9fb398ddaaecea14a9314ab41355fce1 SHA1 f41aff512bc92c1095e254761550af9666142bbc SHA256 1c6cdca6679ad19321cebb568af040d65b7a872a128e1a02de504e2ddf692a72
+MISC ChangeLog 3010 RMD160 c6c9ba827eed01cb99bd2cd4b37b96e666d1c062 SHA1 8813044217ff8114c5ae246265748f86142157c3 SHA256 c4b5de0b55b49d3ca427befa481b5afa94f0e6044233656b57de435571e1fe01
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
